Add cart routing

--- a/src/Nfe102/Bundle/RestoBundle/Resources/config/routing.yml
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/config/routing.yml
@@ -5,3 +5,7 @@ nfe102_resto_hellopage:
 nfe102_resto_homepage:
     pattern:  /
     defaults: { _controller: Nfe102RestoBundle:Default:index }
+
+nfe102_resto_cart:
+    resource: "cartrouting.yml"
+    prefix:   /cart
