--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -64,3 +64,10 @@ swiftmailer:
     username:  %mailer_user%
     password:  %mailer_password%
     spool:     { type: memory }
+
+
+# app/config/config.yml
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: Nfe102\Bundle\RestoBundle\Entity\User
