--- a/src/Nfe102/Bundle/RestoBundle/Resources/config/routing.yml
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/config/routing.yml
@@ -3,8 +3,8 @@ nfe102_resto_hellopage:
     defaults: { _controller: Nfe102RestoBundle:Default:hello }
     
 nfe102_resto_homepage:
-    pattern:  /
-    defaults: { _controller: Nfe102RestoBundle:Default:index }
+    pattern:  /{menu}
+    defaults: { _controller: Nfe102RestoBundle:Default:index , menu: 1}
 
 nfe102_resto_cart:
     resource: "cartrouting.yml"
