correction fso + debut creation pannier show

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -15,9 +15,12 @@ security:
         main:
             pattern: ^/
             form_login:
-                provider: fos_userbundle
-                csrf_provider: form.csrf_provider
-            logout:       true
+                login_path: fos_user_security_login
+                check_path: fos_user_security_check
+            logout:      
+                path: fos_user_security_logout
+                target: /
+                invalidate_session: false
             anonymous:    true
 
     access_control:
