--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,3 +71,8 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: Nfe102\Bundle\RestoBundle\Entity\User
+    registration:
+        form:
+            type: nfe102_user_registration
+    group:
+        group_class: Nfe102\Bundle\RestoBundle\Entity\Group
