début sécurité routes modif layout fosuserbundle

--- a/src/Nfe102/Bundle/RestoBundle/Resources/config/routing/produit.yml
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/config/routing/produit.yml
@@ -7,7 +7,7 @@ produit_show:
     defaults: { _controller: "Nfe102RestoBundle:Produit:show" }
 
 produit_new:
-    pattern:  /new
+    pattern:  /admin/new
     defaults: { _controller: "Nfe102RestoBundle:Produit:new" }
 
 produit_create:
