--- a/src/Nfe102/Bundle/RestoBundle/Resources/config/routing.yml
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/config/routing.yml
@@ -1,6 +1,6 @@
-nfe102_resto_hellopage:
-    pattern:  /hello/{name}
-    defaults: { _controller: Nfe102RestoBundle:Default:hello }
+#nfe102_resto_hellopage:
+#    pattern:  /hello/{name}
+#    defaults: { _controller: Nfe102RestoBundle:Default:hello }
     
 nfe102_resto_homepage:
     pattern:  /{menu}
