--- a/src/Nfe102/Bundle/RestoBundle/Resources/config/routing.yml
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/config/routing.yml
@@ -16,8 +16,8 @@ nfe102_resto_produit:
     prefix: /produit
     
 nfe102_resto_produit_cat:
-    resource: "routing/cathegorieproduit.yml"
-    prefix: /cathegorieproduit
+    resource: "routing/categorieproduit.yml"
+    prefix: /categorieproduit
         
 Nfe102RestoBundle_panier:
     resource: "@Nfe102RestoBundle/Resources/config/routing/panier.yml"
