Ajout editeur + chgmt type description

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
-        "symfony/serializer": "dev-master"
+        "symfony/serializer": "dev-master",
+        "stfalcon/tinymce-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
